<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="Overdraw">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edAddMaterialName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/material_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edMaterialPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edNumberMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_many"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#4d2c91"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/count" />

        <TextView
            android:id="@+id/tvMoney"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/btnAdd_dialog_AddMaterial"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:background="#7e57c2"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnCancel_dialog_AddMaterial"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:background="#7e57c2"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>