<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="Overdraw">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:id="@+id/edRestaurantPT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/restaurant"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="number"
            android:id="@+id/edAddressPT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="number"
            android:id="@+id/edContacPT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnAdd_dialogBillDetail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:background="#7e57c2"
            android:textAllCaps="false"/>

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel_dialogBillDetail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:background="#7e57c2"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>