<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEP"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#b085f5"/>

    <LinearLayout
        android:layout_above="@id/row2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/normalEP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/normal"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textColor="#4d2c91"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/officeEP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgGenre"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/office"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/office"
                android:textColor="#4d2c91"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/fastfoodEP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/hamberger"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast"
                android:textColor="#4d2c91"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/partyEP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView

                android:id="@+id/imgBill"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/party"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party"
                android:textColor="#4d2c91"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>